Write basic credentials downloader
We still need a fork/exec implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
+authors = ["Eric Kidd <git@randomhacks.net>"]
 name = "credentials_to_env"
 version = "0.1.0"
-authors = ["Eric Kidd <git@randomhacks.net>"]
+
+[[bin]]
+name = "credentials-to-env"
 
 [dependencies]
+credentials = "0.2.0"
