--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 authors = ["Eric Kidd <git@randomhacks.net>"]
+description = "Fetch secrets from Hashicorp's Vault and write to environment or files, then exec another program"
+license = "MIT/Apache-2.0"
 name = "credentials_to_env"
+readme = "README.md"
+repository = "https://github.com/faradayio/credentials_to_env"
 version = "0.1.0"
 
 [[bin]]
