--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,18 @@ license = "MIT/Apache-2.0"
 name = "credentials_to_env"
 readme = "README.md"
 repository = "https://github.com/faradayio/credentials_to_env"
-version = "0.4.6"
+version = "0.4.7"
+autobins = false
 
 [[bin]]
 name = "credentials-to-env"
+path = "src/main.rs"
 
 [dependencies]
-credentials = "0.8"
+common_failures = "0.1"
+credentials = "0.10"
 exec = "0.3"
+failure = "0.1.2"
 
 [features]
 unstable = []
